add google login api key

--- a/default/public/index.html
+++ b/default/public/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3fdb10fe311c7dcbaee3b1996446865c"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3fdb10fe311c7dcbaee3b1996446865c"
+    ></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="google-signin-client_id"
+      content="%REACT_APP_GOOGLE_LOGIN_CLIENT_ID%"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
