--- a/default/public/index.html
+++ b/default/public/index.html
@@ -9,6 +9,7 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>
       Kakao.init("7ca497d03fec324f1c9582ef8a37ead6");
+      console.log(Kakao.isInitialized());
     </script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
