--- a/default/public/index.html
+++ b/default/public/index.html
@@ -6,11 +6,12 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3fdb10fe311c7dcbaee3b1996446865c"
     ></script>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>
       Kakao.init("7ca497d03fec324f1c9582ef8a37ead6");
       console.log(Kakao.isInitialized());
-    </script>
+    </script> -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
